--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = '/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Slawomir Jasinski landing page'
 theme = "anatole"
 
 [taxonomies]
