--- a/config.toml
+++ b/config.toml
@@ -23,12 +23,6 @@ customCss = ["css/custom.css"]
 #categories = "/category/:slug/"
 
 [[Languages.en.menu.main]]
-url = "/"
-identifier = "Home"
-name   = "Home"
-weight = 1
-
-[[Languages.en.menu.main]]
 url = "/posts/"
 identifier = "Blog"
 name   = "Blog"
@@ -108,3 +102,5 @@ description = "Ekspert w migracji do chmury, optymalizuje infrastrukturę dla wy
 contentDir = "content/polski"
 weight = 2
 LanguageName = "PL"
+
+ignoreLogs = ['err-youtube-remote']
